[package]
name = "binance-rust"
version = "0.1.1"
edition = "2021"
description = "Binance Api with Rust"
license = "GPL-3.0"
repository = "https://github.com/ryqdev/binance-rust"
authors = ["ryqdev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.81"
reqwest = { version = "0.12.2", features = ["blocking"] }
